<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response_failed" />

</LinearLayout>