<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/search_bar_edit_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:imeOptions="actionSearch"
        android:inputType="textNoSuggestions"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawableLeft="@android:drawable/ic_menu_search"
        />

</RelativeLayout>