...
        android:layout_gravity="center"
        android:layout_marginTop="70dp"

        />

    <SearchView
        android:id="@+id/first_search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
...
